# InterviewPractice

./: .clang-format  CMakeLists.txt  LICENSE
Source/: CMakeLists.txt  CircularBuffer.h  Counter.h  MessageValidator.h  main.cpp
Tests/: CMakeLists.txt  CircularBufferTest.cpp  CounterTest.cpp  MessageValidatorTest.cpp
